syntax = "proto3";

option go_package = "/pb";

service PostService {
  rpc ListPosts(Void) returns (stream PostDB) {};

  rpc GetPost(GetPostRequest) returns (PostDB) {};

  rpc CreatePost(Post) returns (PostDB) {};

  rpc UpdatePost(PostDB) returns (PostDB) {};

  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {};
}

message Post {
  string title = 1;
  string desc = 2;
  int64 votes = 3;
  string author = 4; 
};

message PostDB {
  string _id = 1;
  string title = 2;
  string desc = 3;
  int64 votes = 4;
  string author = 5; 
};

message Void { }

message GetPostRequest {
  string id = 1;
}

message DeletePostRequest {
  string id = 1;
}

message DeletePostResponse {
  string msg = 1;
}
